fix redundant scrollbar

--- a/src/components/common_page_elements/footer/Footer.module.css
+++ b/src/components/common_page_elements/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer{
     height: 180px;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     background: #574545;
